tests/extended_test_suite/positive/nodefield.gp
node n;
n.flag = true;
bool b = n.flag;
printf(b);