tests/extended_test_suite/negative/nononode.gp
node n; 

n.flag = true; 
n.name = "myName"; 
n.data = 1; 

n.data = "hear-ye-hear-ye";